fix(tab-view): make tab view scrollable on mobile view (#1273)
* fix: make tab view item scrollable

* fix: update width

* fix: hide scrollbar

* fix: display scrollbar

--- a/packages/ui/src/assets/css/tabs.css
+++ b/packages/ui/src/assets/css/tabs.css
@@ -1,6 +1,7 @@
 .tabbed-panel {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
   width: 100%;
 }
 
